komodoedit (8.5.3~aso+dfsg-ubuntu0.2) unstable; urgency=low

  * Create all icon directiries in the package tree.

 -- Solomatov A.A. <aso17@ro.ru>  Mon, 04 May 2015 12:19:04 +0400

komodoedit (8.5.3~aso+dfsg-ubuntu0.1.4) unstable; urgency=low

  * Modify macro 'instune' for users basedir added at package tree root;
    Create macro 'einstune' - echoimg the 'instune' content;
    Macros 'reinst' & 'instclome' modified for using basedir & using einstune
    for debug.
  * Creating additional directories in the package tree.

 -- Solomatov A.A. <aso17@ro.ru>  Sun, 03 May 2015 19:28:40 +0400

komodoedit (8.5.3~aso+dfsg-ubuntu0.1.2) unstable; urgency=low

  * Create makefile macro 'instune' - tune files positions in the
    package tree.
  * Recreate macro 'instune' as global macro; create macro
    'reinst' & 'instclone' - move or copy installed files
    into new position.
  * Create a file debian/komodoedit.dirs for additional directory
    in the package tree;
    tune debian/rules for them.

 -- Solomatov A.A. <aso17@ro.ru>  Sat, 02 May 2015 14:42:17 +0400

komodoedit (8.5.3~aso+dfsg-ubuntu0.1) unstable; urgency=medium

  * First really build of debian package for Komodo Edit.

 -- Solomatov A.A. <aso17@ro.ru>  Wed, 28 Jan 2015 22:34:32 +0400

komodoedit (8.5.3~aso+dfsg-ubuntu0.09) unstable; urgency=medium

  * Automatic install Komodo Edit into package build directory.
  * Distribute any package build functions by debian/rules targets.

 -- Solomatov A.A. <aso17@ro.ru>  Sun, 25 Jan 2015 22:55:19 +0400

komodoedit (8.5.3~aso+dfsg-ubuntu0.08) unstable; urgency=medium

  * Detect directory name of expanded original archive by
    grep 'install.sh' string from output of tar listing arc.
  * Assign value to make variables with 'shell' command
    for example, $(shell ls) assigned directory list to desired var.

 -- Solomatov A.A. <aso17@ro.ru>  Mon, 19 Jan 2015 12:33:56 +0400

komodoedit (8.5.3~aso+dfsg-ubuntu0.07) unstable; urgency=medium
